--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "com.google.firebase:firebase-auth:11.4.2"
     compile 'com.android.support:design:26.1.0'
+    compile 'com.google.firebase:firebase-database:11.4.2'
     implementation "io.reactivex.rxjava2:rxjava:2.1.5"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     testImplementation 'junit:junit:4.12'
