new Activities created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="megha.jindal">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,19 +11,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StudentLogin.StudentLoginActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".AdminCreateAccount.CreateAccountActivity" />
-        <activity android:name=".StudentCreateAdmin.StudentCreateActivity"/>
+        <activity android:name=".StudentCreateAdmin.StudentCreateActivity" />
+        <activity android:name=".StudentLogin.StudentLoginActivity" />
+        <activity android:name=".RecruitActivity" />
+        <activity android:name=".AdminLogin.LoginActivity" />
+        <activity android:name=".StudentProfile.StudentProfileActivity" />
+        <activity android:name=".FaqActivity" />
+        <activity android:name=".About_Us" />
+        <activity android:name=".Achievements" />
 
-        <activity android:name=".MainActivity" />
-        <activity android:name=".StudentProfile.StudentProfileActivity"></activity>
     </application>
 
 </manifest>
